[project]
name = "whs-lab"
version = "0.1.1"
description = ""
authors = [
    {name = "nyan101",email = "k.minchul95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "tqdm",
    "selenium",
    "webdriver-manager",
    "numpy",
    "matplotlib",
]
